Fixed overflowing issue on form and header

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 1em 2em 0 35.5em;
+    margin: 1em 2em 0 40em;
     font-size: larger;
     background-color: rgba(2, 126, 12, 0.418);
     border-radius: 5px;
@@ -61,7 +61,7 @@ form {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: -7.5em 0 0 40em;
+    margin: -7.5em 0 0 45em;
     background-color: rgba(0, 0, 0, 0.16);
     border-radius: 5px;
     padding: 15px;
